# password_manager

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  db  init.sql  nvim-dap.lua  runcmd
my_vault/test/: secret  t.json
my_vaults/test/: secret.json
src/: db.rs  main.rs  ui.rs  vault.rs  vault_db.rs
