[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cargo-watch = "8.5.2"
crossterm = "0.27.0"
libsql = "0.3.1"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde-encrypt = "0.7.0"
serde_json = "1.0.114"
